@@ -234,6 +234,8 @@ PIG-1309: Map-side Cogroup (ashutoshc)
 
 BUG FIXES
 
+PIG-1762: Logical simplification fails on map key referenced values (yanz)
+
 PIG-1761: New logical plan: Exception when bag dereference in the middle of expression (daijy)
 
 PIG-1757: After split combination, the number of maps may vary slightly (yanz)
